✨ refactor(datasophon-common, datasophon-service): 继承BaseCommand并优化WorkerHttpClient使用
变更内容：
1. 在`LdapCommand`中继承`BaseCommand`，并添加`serialVersionUID`以增强序列化支持。
2. 更新`WorkerScheduleService`和`AgentDistributionServiceImpl`，优化`WorkerHttpClient`的使用，简化连接检查和系统信息收集逻辑。
3. 在`ClusterUserServiceImpl`中引入`WorkerTaskHelper`，提升任务处理能力。

效果：
- 提升了代码的可维护性和可读性，确保系统的灵活性和扩展性。